--- a/templates/alquiler/cliente_list.html
+++ b/templates/alquiler/cliente_list.html
@@ -5,29 +5,34 @@
 {% block content %}
 
 <h2 class="page-header"> Lista de Clientes </h2>
+<form action="{% url 'alquiler:cliente_busqueda' %}" method="get">
+<div class="form-group">
+<div class="col-xs-4">
+    <input type="text" class="form-control" name="q" placeholder="Escriba CI o nombre" />
+</div>
+    <button type="submit" class="btn btn-primary">Buscar</button>
+</div>
+    <table class="table table-striped">
+        <tr>
+          <td> <strong> CARNET </strong> </td>
+          <td> <strong> NOMBRE </strong> </td>
+          <td> <strong> APELLIDOS </strong> </td>
+          <td> <strong> TELEFONO </strong> </td>
+          <td> <strong> ACCIONES </strong> </td>
+        </tr>
+        {% for cliente in clientes %}
+        <tr>
+            <td> {{ cliente.carnet }} </td>
+            <td> {{ cliente.nombre }} </td>
+            <td> {{ cliente.apellidos }} </td>
+            <td> {{ cliente.telefono }} </td>
+            <td>
+                <a href="{% url 'alquiler:cliente_editar' cliente.carnet %}" class="btn btn-primary btn-xs">Editar</a>
+                <a href="{% url 'alquiler:cliente_eliminar' cliente.carnet %}" class="btn btn-danger btn-xs">Eliminar</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+</form>
 
-    <input type="text" name="q" placeholder="Search Post" />
-    <a href="{% url 'alquiler:cliente_busqueda' %}" class="btn btn-primary btn-xs">Editar</a>
-
-<table class="table table-striped">
-    <tr>
-      <td> <strong> CARNET </strong> </td>
-      <td> <strong> NOMBRE </strong> </td>
-      <td> <strong> APELLIDOS </strong> </td>
-      <td> <strong> TELEFONO </strong> </td>
-      <td> <strong> ACCIONES </strong> </td>
-    </tr>
-    {% for cliente in object_list %}
-    <tr>
-        <td> {{ cliente.carnet }} </td>
-        <td> {{ cliente.nombre }} </td>
-        <td> {{ cliente.apellidos }} </td>
-        <td> {{ cliente.telefono }} </td>
-        <td>
-            <a href="{% url 'alquiler:cliente_editar' cliente.carnet %}" class="btn btn-primary btn-xs">Editar</a>
-            <a href="{% url 'alquiler:cliente_eliminar' cliente.carnet %}" class="btn btn-danger btn-xs">Eliminar</a>
-        </td>
-    </tr>
-    {% endfor %}
-</table>
 {% endblock content %}
