--- a/templates/alquiler/alquiler_list_activos.html
+++ b/templates/alquiler/alquiler_list_activos.html
@@ -9,19 +9,23 @@
     <tr>
       <td> <strong> HORA INICIO </strong> </td>
       <td> <strong> HORA FINAL </strong> </td>
-      <td> <strong> CAJERO </strong> </td>
-      <td> <strong> CLIENTE </strong> </td>
+      <td> <strong> NOMBRE </strong> </td>
       <td> <strong> MOTOS </strong> </td>
       <td> <strong> TOTAL </strong> </td>
+      <td> <strong> ACCIONES </strong> </td>
     </tr>
     {% for alquiler in alquileres %}
     <tr>
         <td> {{ alquiler.hora_inicio }} </td>
         <td> {{ alquiler.hora_fin }} </td>
-        <td> {{ alquiler.cajero }} </td>
-        <td> {{ alquiler.cliente }} </td>
+        <td> {{ alquiler.cliente.nombre }} </td>
         <td> {{ alquiler.motos }} </td>
         <td> {{ alquiler.total }} </td>
+        <td>
+            <a href="{% url 'alquiler:alquiler_detalle' alquiler.id %}" class="btn btn-warning btn-xs">Detalles</a>
+            <a href="{% url 'alquiler:alquiler_editar' alquiler.id %}" class="btn btn-success btn-xs">Finalizar</a>
+            <a href="{% url 'alquiler:alquiler_eliminar' alquiler.id %}" class="btn btn-danger btn-xs">Eliminar</a>
+        </td>
     </tr>
     {% endfor %}
 </table>
