--- a/templates/alquiler/alquiler_detail.html
+++ b/templates/alquiler/alquiler_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base/base.html' %}
+{% load alquiler_tags %}
 
 {% block title %}Lista de alquiler{% endblock title %}
 
@@ -26,6 +27,7 @@
   </div>
 </form>
 <br /> <br /> <br /> <br />
+<p>Tiempo de aquiler: <strong>{{ alquiler.tiempo }} minutos</strong></p>
 <fieldset>
   <legend>Datos de las motos </legend>
 </fieldset>
@@ -36,7 +38,8 @@
       <td> <strong> DESCRIPCION </strong> </td>
       <td> <strong> MARCA </strong> </td>
       <td> <strong> MODELO </strong> </td>
-      <td> <strong> PRECIO </strong> </td>
+      <td> <strong> PRECIO POR HORA</strong> </td>
+      <td> <strong> PRECIO ALQUILER</strong> </td>
     </tr>
     {% for moto in alquiler.vehiculo.all%}
      <tr>
@@ -45,9 +48,11 @@
         <td> {{ moto.marca }}</td>
         <td> {{ moto.modelo }}</td>
         <td> {{ moto.tipo.precio }}</td>
+        <td> {{ moto.tipo.precio|get_price_by_time:alquiler.tiempo }}</td>
      </tr>
      {% endfor %}
      <tr>
+        <td></td>
         <td></td>
         <td></td>
         <td></td>
