--- a/templates/vehiculo/trabajo_list.html
+++ b/templates/vehiculo/trabajo_list.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 <h2 class="page-header"> Lista de Trabajos </h2>
+
 <table class="table table-striped">
     <tr>
       <td> <strong> DESCRIPCION </strong> </td>
@@ -15,7 +16,11 @@
     {% for trabajo in object_list %}
     <tr>
         <td> {{ trabajo.descripcion }} </td>
-        <td> <input type="checkbox" name="my-checkbox" checked> {{ trabajo.activo }} </td>
+        {% if trabajo.activo %}
+            <td> Activo </td>
+        {% else %}
+            <td> Inactivo </td>
+        {% endif %}
         <td>
             <a href="{% url 'vehiculo:trabajo_editar' trabajo.id %}" class="btn btn-primary btn-xs">Editar</a>
             <a href="{% url 'vehiculo:trabajo_eliminar' trabajo.id %}" class="btn btn-danger btn-xs">Eliminar</a>
